# ChangeLog for dev-java/reflectasm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/1.05-build.xml,
  reflectasm-1.05.ebuild:
  Fixed reflectasm ebuild

*reflectasm-1.05 (09 Jul 2013)

  09 Jul 2013; johann@j-schmitz.net +files/1.05-build.xml, +metadata.xml,
  +reflectasm-1.05.ebuild:
  Added ebuild for reflectasm-1.05